{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 116,
  "lineage": "b11f1839-9dfc-1210-4259-b970e7292f21",
  "resources": [
    {
      "module": "module.Bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-047d7c33f6e7b4bc4",
            "arn": "arn:aws:ec2:us-west-1:376129847624:instance/i-09a076dcd9e10dc99",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09a076dcd9e10dc99",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-app",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-069c8766f1e4e0810",
            "private_dns": "ip-10-0-1-177.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.177",
            "public_ip": "54.183.176.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d41607550a15564b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-00e6b28b122f1ff26"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a1b50cfb3076b1d0",
            "tags": {
              "Name": "bastion-jumper_server"
            },
            "tags_all": {
              "Name": "bastion-jumper_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00e6b28b122f1ff26"
            ]
          },
          "dependencies": [
            "module.bastion-sg.aws_security_group.my-sg",
            "module.public-subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:376129847624:security-group/sg-00e6b28b122f1ff26",
            "description": "allow ssh",
            "egress": [],
            "id": "sg-00e6b28b122f1ff26",
            "ingress": [],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "376129847624",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa2e15fe6316aa4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion-sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:376129847624:security-group-rule/sgr-0d2195b9fd3aaa402",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0d2195b9fd3aaa402",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00e6b28b122f1ff26",
            "security_group_rule_id": "sgr-0d2195b9fd3aaa402",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion-sg.aws_security_group.my-sg",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion-sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:376129847624:security-group-rule/sgr-030a2a7b196aeff2c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-030a2a7b196aeff2c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00e6b28b122f1ff26",
            "security_group_rule_id": "sgr-030a2a7b196aeff2c",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion-sg.aws_security_group.my-sg",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:376129847624:internet-gateway/igw-0dfa3c6ba20473c4d",
            "id": "igw-0dfa3c6ba20473c4d",
            "owner_id": "376129847624",
            "tags": {
              "Name": "my-igw"
            },
            "tags_all": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-0fa2e15fe6316aa4d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.private-route-table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-Rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:376129847624:route-table/rtb-0fa8dc82e2895bff0",
            "id": "rtb-0fa8dc82e2895bff0",
            "owner_id": "376129847624",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-Rt"
            },
            "tags_all": {
              "Name": "private-Rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa2e15fe6316aa4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.private-route-table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5981093263f8c6e",
            "route_table_id": "rtb-0fa8dc82e2895bff0",
            "subnet_id": "subnet-0371f831acc2945ca"
          },
          "dependencies": [
            "module.private-route-table.aws_route_table.my-Rt",
            "module.private-subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.private-subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:376129847624:subnet/subnet-0371f831acc2945ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0371f831acc2945ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "376129847624",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-0fa2e15fe6316aa4d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-route-table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-Rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:376129847624:route-table/rtb-0e2c945fcfe7d6461",
            "id": "rtb-0e2c945fcfe7d6461",
            "owner_id": "376129847624",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dfa3c6ba20473c4d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-Rt"
            },
            "tags_all": {
              "Name": "public-Rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa2e15fe6316aa4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-route-table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e9a1b7c40559a08",
            "route_table_id": "rtb-0e2c945fcfe7d6461",
            "subnet_id": "subnet-0a1b50cfb3076b1d0"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.public-route-table.aws_route_table.my-Rt",
            "module.public-subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:376129847624:subnet/subnet-0a1b50cfb3076b1d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1b50cfb3076b1d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376129847624",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0fa2e15fe6316aa4d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:376129847624:vpc/vpc-0fa2e15fe6316aa4d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ba1e6e34b0092ce0",
            "default_route_table_id": "rtb-019e54f9a62f48c2c",
            "default_security_group_id": "sg-0e0cf1980b2aea824",
            "dhcp_options_id": "dopt-0b5046f10a06e4a9e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fa2e15fe6316aa4d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-019e54f9a62f48c2c",
            "owner_id": "376129847624",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.web-app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-047d7c33f6e7b4bc4",
            "arn": "arn:aws:ec2:us-west-1:376129847624:instance/i-06333aa390a4243a7",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06333aa390a4243a7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-app",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07fbd2d74e8331a73",
            "private_dns": "ip-10-0-2-124.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02080ccf9f30906c1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0b1bba7cf1db55ec2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0371f831acc2945ca",
            "tags": {
              "Name": "web-app"
            },
            "tags_all": {
              "Name": "web-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b1bba7cf1db55ec2"
            ]
          },
          "dependencies": [
            "module.private-subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.myvpc",
            "module.web-app-sg.aws_security_group.my-sg"
          ]
        }
      ]
    },
    {
      "module": "module.web-app-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:376129847624:security-group/sg-0b1bba7cf1db55ec2",
            "description": "allow ssh and port 3000",
            "egress": [],
            "id": "sg-0b1bba7cf1db55ec2",
            "ingress": [],
            "name": "app-sg",
            "name_prefix": "",
            "owner_id": "376129847624",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-sg"
            },
            "tags_all": {
              "Name": "app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa2e15fe6316aa4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.web-app-sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:376129847624:security-group-rule/sgr-02ed327694757cad1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-02ed327694757cad1",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b1bba7cf1db55ec2",
            "security_group_rule_id": "sgr-02ed327694757cad1",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.myvpc",
            "module.web-app-sg.aws_security_group.my-sg"
          ]
        }
      ]
    },
    {
      "module": "module.web-app-sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow-3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:376129847624:security-group-rule/sgr-0670ba41e6de7331b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-0670ba41e6de7331b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b1bba7cf1db55ec2",
            "security_group_rule_id": "sgr-0670ba41e6de7331b",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.myvpc",
            "module.web-app-sg.aws_security_group.my-sg"
          ]
        }
      ]
    },
    {
      "module": "module.web-app-sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:376129847624:security-group-rule/sgr-027158dd61e700e59",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-027158dd61e700e59",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b1bba7cf1db55ec2",
            "security_group_rule_id": "sgr-027158dd61e700e59",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.myvpc",
            "module.web-app-sg.aws_security_group.my-sg"
          ]
        }
      ]
    }
  ]
}